--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,10 @@
     />
   </head>
   <body>
+  index.html  index.html
     <app-root></app-root>
+    index index.html  index.html
+
   </body>
 </html>
 
